Fix spacing on browse page

--- a/src/styles/Browse.css
+++ b/src/styles/Browse.css
@@ -5,7 +5,7 @@
     overflow: hidden;
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: space-evenly;
 }
 
 /* Logo and hamburger */
@@ -14,7 +14,7 @@
     align-items: center;
     margin-left: 40px;
     margin-right: 40px;
-    margin-bottom: 20px;
+    margin-bottom: 0px;
 }
 
 .logo-browse {
@@ -91,7 +91,7 @@
 
 /* Trending boxes */
 .browse-section-title {
-    margin: 20px 40px;
+    margin: 0px 40px;
     color: #0FF2F2;
     font-family: 'Sifonn Pro';
     font-size: 16px;
