--- a/src/styles/NavMenu.css
+++ b/src/styles/NavMenu.css
@@ -4,7 +4,7 @@
     height: 100vh;
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: space-evenly;
 }
 
 /* Close navigation button */
@@ -58,7 +58,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin: 40px 70px;
+    margin: 0px 70px;
 }
 
 .tmdb-logo {
